[package]
name = "securethebox_server_rs"
version = "0.1.0"
authors = ["charles 🔥"]
edition = "2018"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/seed.rs"

[dependencies]
# common
flate2 = "1.0.14"
tar = "0.4.26"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
snailquote = "0.3.0"

# actix
actix-rt = "1.1.0"
actix-web = "2.0.0"

# mongodb
bson = "0.14.1"
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = "0.14.2"
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper" }
log = "0.4.8"
mongodb-cursor-pagination = { version = "0.2.6", features = ["graphql"] }
mongodb-base-service = { version = "0.2.1", features = ["graphql"] }
mongodb = "0.9.2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
# optional
cached = { version = "0.12.0", optional = true }