[package]
name = "securethebox_server_rs"
version = "0.1.0"
authors = ["CavalryTactics"]
edition = "2018"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# common
flate2 = "1.0.14"
tar = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
snailquote = "0.3.0"

# actix
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-rt = "1.0.0"
actix-cors = "0.2.0"
env_logger = "0.7.1"

# async-graphql
async-graphql = "1.12.2"
async-graphql-actix-web = "1.4.2"
books = { path = "./models/books" }

# mongodb
bson = "0.14.1"
cached = "0.12.0"
mongodb = "0.10.0"
dotenv = "0.15.0"